--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
   <link rel="icon" type="image/x-icon" href="/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Forever in Bitcoin</title>
+  <script>window.global = window;</script>
+  <script type="module">
+    import { Buffer } from "buffer/"; // <-- no typo here ("/")
+    import process from "process";
+    import EventEmitter from "events";
+
+    window.Buffer = Buffer;
+    window.process = process;
+    window.EventEmitter = EventEmitter;
+  </script>
 </head>
 
 <body class="bg-white dark:bg-gray-900">
