--- a/index.html
+++ b/index.html
@@ -5,7 +5,27 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/x-icon" href="/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <!-- HTML Meta Tags -->
   <title>Forever in Bitcoin</title>
+  <meta name="description" content="Inscribe your images and text to make them last forever.">
+
+  <!-- Facebook Meta Tags -->
+  <meta property="og:url" content="https://foreverinbitcoin.com">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Forever in Bitcoin">
+  <meta property="og:description" content="Inscribe your images and text to make them last forever.">
+  <meta property="og:image" content="https://foreverinbitcoin.com/og_image.png">
+
+  <!-- Twitter Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta property="twitter:domain" content="foreverinbitcoin.com">
+  <meta property="twitter:url" content="https://foreverinbitcoin.com">
+  <meta name="twitter:title" content="Forever in Bitcoin">
+  <meta name="twitter:description" content="Inscribe your images and text to make them last forever.">
+  <meta name="twitter:image" content="https://foreverinbitcoin.com/og_image.png">
+
+  <!-- Meta Tags Generated via https://www.opengraph.xyz -->
 
 </head>
 
